# aegis

./: .gitignore  README.md  aegis-final.html  clean.sh  index.html  install-linux.sh  install.sh  migrate-to-data-disk.sh  pentagon-pizza.yml  pentagon_pizza.py  pyproject.toml  run.sh  update_data.py
.github/workflows/: deploy-pages.yml  pentagon-pizza.yml  update-data.yml
frontend/: app.js  data.json  index.html  styles.css
frontend/js/: chart.js  config.js  data.js  display.js  main.js  sparklines.js  ui.js  utils.js
tests/: test_buildup_scoring.py
tests/fixtures/: fleet_tracker_snapshots.json
