[project]
name = "aegis"
version = "0.1.0"
description = "Pentagon Pizza Meter - Tracks busyness data for pizza places near the Pentagon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"pentagon_pizza.py" = "pentagon_pizza.py"
