[project]
name = "aegis"
version = "0.1.0"
description = "Pentagon Pizza Meter - Tracks busyness data for pizza places near the Pentagon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pytrends>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"update_data.py" = "update_data.py"
